fix(Nodes): wrong color in contrast high theme [YTFRONT-4610]

--- a/packages/ui/src/ui/pages/components/tabs/nodes/Nodes/Nodes.scss
+++ b/packages/ui/src/ui/pages/components/tabs/nodes/Nodes/Nodes.scss
@@ -16,7 +16,6 @@ $elements-table: '.elements-table';
         grid-gap: 20px;
 
         z-index: var(--fixed-toolbar-z-index);
-        background-color: var(--main-background);
 
         min-width: 200px;
         padding: 10px 0;
